--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -2,6 +2,13 @@
   <div class="p-4">
     <h4 class="font-normal">MyInvestmentTime.com</h4>
   </div>
+  <div>
+    <% if signed_in? -%>
+      <%= button_to t(".sign_out"), sign_out_path, method: :delete %>
+    <% else -%>
+      <%= link_to t(".sign_in"), sign_in_path %>
+    <% end -%>
+  </div>
   <div class="p-2 m-2 bg-grey-light cursor-pointer" onclick="toggleMenu()">
     <i class="fas fa-bars"></i>
   </div>
