adds users to invests adds username to user setup views and partials

--- a/app/views/invests/index.html.erb
+++ b/app/views/invests/index.html.erb
@@ -10,6 +10,6 @@
 </form>
 
 
-<% 10.times do %>
-  <%= render 'invests/shared/invest_list' %>
+<% @invests.each do |invest| %>
+  <%= render 'invests/shared/invest_list', invest: invest %>
 <% end %>
