--- a/app/views/invests/index.html.erb
+++ b/app/views/invests/index.html.erb
@@ -1,10 +1,10 @@
 <form class="flex justify-between items-center flex-wrap bg-grey-lighter p-4">
   <div class="flex-grow mr-4">
-    <input class="appearance-none block w-full bg-white text-grey-darker border border-grey-darker py-3 px-4" id="grid-last-name" type="text" placeholder="Find an investment...">
+    <input class="w-full-input" id="grid-last-name" type="text" placeholder="Find an investment...">
   </div>
   <div class="flex-none">
-    <button class="bg-grey-dark hover:bg-grey-darker text-white py-3 px-4" type="button">
-      SEARCH
+    <button class="btn-default" type="button">
+      <%= t("forms.search") %>
     </button>
   </div>
 </form>
