--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,14 +1,14 @@
-<div id="clearance" class="sign-up">
-  <h2><%= t(".title") %></h2>
+<div id="clearance" class="sign-in w-1/2 mx-auto bg-grey-lighter p-8">
+  <h2 class="mb-6"><%= t(".title") %></h2>
 
   <%= form_for @user do |form| %>
     <%= render partial: '/users/form', object: form %>
 
-    <div class="submit-field">
-      <%= form.submit %>
+    <div class="submit-field my-4 text-center">
+      <%= form.submit class: 'btn-default mx-auto px-8' %>
     </div>
 
-    <div class="other-links">
+    <div class="other-links mt-4 mx-auto text-center">
       <%= link_to t(".sign_in"), sign_in_path %>
     </div>
   <% end %>
