--- a/app/views/invests/new.html.erb
+++ b/app/views/invests/new.html.erb
@@ -1,7 +1,14 @@
-<h1>Invests#new</h1>
-<p>Find me in app/views/invests/new.html.erb</p>
-<%= simple_form_for @invest do |f| %>
-  <%= f.input :title %>
-  <%= f.input :body %>
-  <%= f.button :submit %>
-<% end %>
+<div id="clearance" class="password-reset w-1/2 mx-auto bg-grey-lighter p-8">
+  <h2 class="mb-6"><%= t(".title") %></h2>
+  <%= simple_form_for @invest do |f| %>
+    <div class="text-field my-2">
+      <%= f.input :title, input_html: { class: 'w-full-input' }, placeholder: 'What are you working on?', label: false %>
+    </div>
+    <div class="text-field my-2">
+      <%= f.input :body, input_html: { class: 'w-full-input' }, placeholder: 'Care to elaborate?', label: false %>
+    </div>
+    <div class="submit-field my-4 text-center">
+      <%= f.button :submit, class: 'btn-default mx-auto px-8' %>
+    </div>
+  <% end %>
+</div>
