fixes index when no invests in db

--- a/app/views/invests/index.html.erb
+++ b/app/views/invests/index.html.erb
@@ -10,6 +10,6 @@
 </form>
 
 
-<% @invests.each do |invest| %>
+<% @invests.try(:each) do |invest| %>
   <%= render 'invests/shared/invest_list', invest: invest %>
 <% end %>
