Add header logo

--- a/app/javascript/css/application.css
+++ b/app/javascript/css/application.css
@@ -122,6 +122,12 @@ a:active {
     background-color: #dae1e7 !important;
 }
 
+.header-logo {
+    height: 40px;
+    padding: 0;
+    margin: -11px 0 -15px -17px;
+}
+
 @tailwind utilities;
 
 /**
