--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,6 +1,6 @@
 <div class="fixed z-20 pin-t pin-l pin-r flex justify-between bg-grey-lighter">
   <div class="p-4">
-    <a class="text-black-darker lowercase no-underline" href="/"><h4 class="font-normal"><%= t("general.site_title") %></h4></a>
+    <a class="text-black-darker lowercase no-underline" href="/"><%= image_tag 'header-logo', class: 'header-logo' %></h4></a>
   </div>
   <div>
     <%= link_to invests_new_path do %>
