update readme and some colors

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,4 +1,4 @@
-<div class="fixed z-20 pin-t pin-l pin-r flex justify-between bg-grey-lighter">
+<div class="fixed z-20 pin-t pin-l pin-r flex justify-between bg-grey-lighter border-b-2 border-grey-light">
   <div class="p-4">
     <a class="text-black-darker lowercase no-underline" href="/"><%= image_tag 'header-logo.svg', class: 'header-logo' %></h4></a>
   </div>
