--- a/app/javascript/css/application.css
+++ b/app/javascript/css/application.css
@@ -113,13 +113,13 @@ a:active {
 .pagination a {
     padding: 1.1em 1.3em !important;
     margin: .2em !important;
-    border: 1px solid #22292f !important;
+    border: 1px solid #606f7b !important;
     text-decoration: none !important;
-    color: #22292f !important;
+    color: #606f7b !important;
 }
 
 .pagination a:hover {
-    background-color: #dae1e7 !important;
+    background-color: #f1f5f8 !important;
 }
 
 .header-logo {
