--- a/app/views/invests/shared/_invest_list.html.erb
+++ b/app/views/invests/shared/_invest_list.html.erb
@@ -1,7 +1,7 @@
-<div class="flex justify-between items-stretch flex-wrap bg-grey-lighter p-4 mt-4">
+<div class="w-full-card">
   <div class="w-3/4 pr-4">
     <h3 class="w-full border-b-2 border-grey-light mb-2"><%= invest.title %></h3>
-    <p><%= invest.body %></p>
+    <p><%= truncate invest.body, length: 200, separator: /\w+/ %></p>
   </div>
   <div class="w-1/4 border-l-2 border-grey-light pl-4">
     <p><%= invest.user.username %></p>
