--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -3,7 +3,7 @@
     <a class="text-black-darker lowercase no-underline" href="/"><%= image_tag 'header-logo.svg', class: 'header-logo' %></h4></a>
   </div>
   <div>
-    <%= link_to invests_new_path do %>
+    <%= link_to new_invest_path do %>
     <div class="float-left p-2 m-2 bg-grey-light cursor-pointer">
         <i class="fas fa-plus"></i>
     </div>
