links invest index cards to details and styles hover

--- a/app/javascript/css/application.css
+++ b/app/javascript/css/application.css
@@ -149,6 +149,14 @@ a:active {
  * @import "utilities/skew-transforms";
  */
 
+.hover-grow {
+    transition: all .2s ease-in-out;
+}
+
+.hover-grow:hover {
+    transform: scale(1.01);
+}
+
 .m-t-c {
     margin-top: 6rem;
 }
