--- a/app/views/invests/shared/_invest_list.html.erb
+++ b/app/views/invests/shared/_invest_list.html.erb
@@ -1,4 +1,4 @@
-<div class="w-full-card">
+<div class="w-full-card hover-grow">
   <div class="w-3/4 pr-4">
     <h3 class="w-full border-b-2 border-grey-light mb-2"><%= invest.title %></h3>
     <p><%= truncate invest.body, length: 200, separator: /\w+/ %></p>
