search with where like clause

--- a/app/views/invests/index.html.erb
+++ b/app/views/invests/index.html.erb
@@ -1,14 +1,11 @@
-<form class="flex justify-between items-center flex-wrap bg-grey-lighter p-4">
+<%= form_tag(invests_path, :method => 'get', id: 'search-form', class: 'flex justify-between items-center flex-wrap bg-grey-lighter p-4') do %>
   <div class="flex-grow mr-4">
-    <input class="w-full-input" id="grid-last-name" type="text" placeholder="Find an investment...">
+    <%= text_field_tag :search, params[:search], placeholder: "Find an investment...", class: 'w-full-input' %>
   </div>
   <div class="flex-none">
-    <button class="btn-default" type="button">
-      <%= t("forms.search") %>
-    </button>
+    <%= submit_tag "Search", :name => nil, class: 'btn-default' %>
   </div>
-</form>
-
+<% end %>
 
 <% @invests.try(:each) do |invest| %>
   <%= render 'invests/shared/invest_list', invest: invest %>
