--- a/app/views/invests/new.html.erb
+++ b/app/views/invests/new.html.erb
@@ -1,37 +1,42 @@
-<div id="clearance" class="password-reset w-1/2 mx-auto bg-grey-lighter p-8">
-  <h2 class="mb-6"><%= t(".title") %></h2>
-  <%= simple_form_for @invest do |f| %>
-    <div class="my-2">
-      <p class="text-sm">title:</p>
-    </div>
-    <div class="text-field my-2">
-      <%= f.input :title, input_html: { class: 'w-full-input' }, label: false %>
-    </div>
-    <div class="my-2">
-      <p class="text-sm">description:</p>
-    </div>
-    <div class="text-field my-2">
-      <%= f.input :body, input_html: { class: 'w-full-input' }, label: false %>
-    </div>
+<div class="w-full-card">
+  <div class="w-full p-4 pb-0">
+    <h2 class="mb-6"><%= t(".title") %></h2>
+  </div>
 
-    <%= f.simple_fields_for :links, OpenStruct.new(@invest.links) do |link| %>
+  <div class="w-full p-4 pt-0">
+    <%= simple_form_for @invest do |f| %>
       <div class="my-2">
-        <p class="text-sm">homepage:</p>
+        <p class="text-sm">title:</p>
       </div>
       <div class="text-field my-2">
-        <%= link.input :homepage, input_html: { class: 'w-full-input' }, label: false %>
+        <%= f.input :title, input_html: { class: 'w-full-input' }, label: false %>
       </div>
-
       <div class="my-2">
-        <p class="text-sm">github:</p>
+        <p class="text-sm">description:</p>
       </div>
       <div class="text-field my-2">
-        <%= link.input :github, input_html: { class: 'w-full-input' }, label: false %>
+        <%= f.input :body, input_html: { class: 'w-full-input' }, label: false %>
+      </div>
+
+      <%= f.simple_fields_for :links, OpenStruct.new(@invest.links) do |link| %>
+        <div class="my-2">
+          <p class="text-sm">homepage:</p>
+        </div>
+        <div class="text-field my-2">
+          <%= link.input :homepage, input_html: { class: 'w-full-input' }, label: false %>
+        </div>
+
+        <div class="my-2">
+          <p class="text-sm">github:</p>
+        </div>
+        <div class="text-field my-2">
+          <%= link.input :github, input_html: { class: 'w-full-input' }, label: false %>
+        </div>
+      <% end %>
+
+      <div class="submit-field my-4 text-center">
+        <%= f.button :submit, class: 'btn-default mx-auto px-8' %>
       </div>
     <% end %>
-
-    <div class="submit-field my-4 text-center">
-      <%= f.button :submit, class: 'btn-default mx-auto px-8' %>
-    </div>
-  <% end %>
+  </div>
 </div>
