adds password rest routes and configures letter opener

--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -8,6 +8,9 @@
   </head>
 
   <body>
+    <div style="background-color: lightgrey">
+      <h3>myInvestmentTime.com</h3>
+    </div>
     <%= yield %>
   </body>
 </html>
