Adds user show action, view, routes, and controller spec

--- a/app/views/settings/profiles/edit.html.erb
+++ b/app/views/settings/profiles/edit.html.erb
@@ -1,4 +1,4 @@
-<div id="clearance" class="password-reset flex w-full mx-auto bg-grey-lighter">
+<div class="password-reset flex w-full mx-auto bg-grey-lighter">
   <div class="w-1/4 py-8 bg-grey">
     <ul class="list-reset">
       <%= link_to edit_settings_account_path, class: 'no-underline' do %>
