creates views for status and updates existing views
creates status controller with create action

--- a/app/views/invests/edit.html.erb
+++ b/app/views/invests/edit.html.erb
@@ -1,3 +1,12 @@
+<div class="w-full-card w-auto">
+  <div class="m-0 p-0">
+    <ul class="list-reset float-none">
+      <%= link_to(invest_path(@invest)) do %>
+        <li class="float-left p-4 bg-grey-light mx-1 hover:bg-grey-lightest">cancel</li>
+      <% end %>
+    </ul>
+  </div>
+</div>
 <div class="w-full-card">
   <div class="w-full p-4 pb-0">
     <h2 class="mb-6"><%= t(".title") %></h2>
