--- a/app/views/passwords/create.html.erb
+++ b/app/views/passwords/create.html.erb
@@ -1,3 +1,3 @@
-<div id="clearance" class="password-reset">
+<div id="clearance" class="password-reset w-1/2 mx-auto bg-grey-lighter p-8">
   <p><%= t(".description") %></p>
 </div>
