--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -7,9 +7,6 @@
       <div class="flex-grow mr-4">
         <%= text_field_tag :search, params[:search], placeholder: "Find an investment...", class: 'w-full-input p-2' %>
       </div>
-<!--      <div class="flex-none">-->
-        <%#= submit_tag "Search", :name => nil, class: 'btn-default' %>
-<!--      </div>-->
     <% end %>
   </div>
   <div>
@@ -17,6 +14,11 @@
     <div class="float-left p-2 m-2 bg-grey-light cursor-pointer">
         <i class="fas fa-plus"></i>
     </div>
+    <% end %>
+    <%= link_to activities_index_path do %>
+      <div class="float-left p-2 m-2 bg-grey-light cursor-pointer">
+        <i class="fas fa-bell"></i>
+      </div>
     <% end %>
     <div class="float-left p-2 m-2 bg-grey-light cursor-pointer" onclick="toggleMenu()">
       <i class="fas fa-bars"></i>
