--- a/app/views/invests/index.html.erb
+++ b/app/views/invests/index.html.erb
@@ -1,9 +1,9 @@
 <% @invests.try(:each) do |invest| %>
-  <%= link_to invest, class: 'no-underline' do %>
+  <%= link_to invest, class: 'no-color-link no-underline' do %>
     <%= render 'invests/shared/invest_list', invest: invest %>
   <% end %>
 <% end %>
 
-<div class="text-center m-6">
+<div class="center">
   <%= paginate @invests %>
 </div>
