--- a/app/views/invests/show.html.erb
+++ b/app/views/invests/show.html.erb
@@ -1,49 +1,68 @@
 <% if @invest.user == current_user %>
-  <div class="w-full-card w-auto">
-    <div class="m-0 p-0">
-      <ul class="list-reset float-none">
-        <%= link_to(edit_invest_path(@invest)) do %>
-          <li class="float-left p-4 bg-grey-light mx-1 hover:bg-grey-lightest">edit</li>
-        <% end %>
-        <%= link_to(new_invest_status_path(@invest)) do %>
-          <li class="float-left p-4 bg-grey-light mx-1 hover:bg-grey-lightest">update history</li>
-        <% end %>
-      </ul>
+  <div class="row">
+    <div class="col s12">
+      <%= link_to 'edit', edit_invest_path(@invest), class: 'waves-effect waves-light btn' %>
+      <%= link_to 'update history', new_invest_status_path(@invest), class: 'waves-effect waves-light btn' %>
     </div>
   </div>
 <% end %>
 
-<div class="w-full-card">
-  <div class="w-3/4 pr-4">
-    <h3 class="w-full border-b-2 border-grey-light mb-2"><%= @invest.title %></h3>
-    <p><%= @invest.body %></p>
-  </div>
-  <div class="w-1/4 border-l-2 border-grey-light pl-4">
-    <h4><%= link_to @invest.user.username, user_url(@invest.user) %></h4>
-    <% if current_user.likes.where(invest: @invest).blank? %>
-      <h4 class="mt-2"><%= link_to "Likes: #{@invest.likes.length}", invest_likes_path(@invest), method: :post %></h4>
-    <% else %>
-      <h4 class="mt-2"><%= link_to "Likes: #{@invest.likes.length}", invest_like_path(@invest, Like.find_by(user: current_user, invest: @invest)), method: :delete %></h4>
-    <% end %>
-  </div>
-</div>
-<div class="w-full-card">
-  <div class="w-full">
-    <h3 class="w-full border-b-2 border-grey-light mb-2">links</h3>
-    <% @invest.links.try(:each) do |i| %>
-      <a href="<%= i.to_a[1] %>"><h4 class="pb-4"><%= i.to_a[0] + ': ' + i.to_a[1] %></h4></a>
-    <% end %>
-  </div>
-</div>
-<div class="w-full-card">
-  <div class="w-full">
-    <h3 class="w-full border-b-2 border-grey-light mb-2">history</h3>
-    <% @invest.statuses.try(:each) do |i| %>
-      <div style="clear: both">
-        <h4 class="pb-4 float-left"><%= i.title %>:</h4>
-        <p class="pb-4 float-left ml-4"><%= i.detail %></p>
-        <p class="pb-4 float-right ml-4"><%= i.created_at.strftime('%H:%M - %b %e %Y') %></p>
+<div class="row">
+  <div class="col s12">
+    <div class="card">
+      <div class="card-stacked">
+        <div class="card-content">
+          <div class="left">
+            <h6><%= link_to @invest.user.username, user_url(@invest.user) %></h6>
+          </div>
+          <div class="right">
+            <% if current_user.likes.where(invest: @invest).blank? %>
+              <h6 class="pl2"><i class="material-icons likes-icon">thumb_up</i><%= link_to @invest.likes.length, invest_likes_path(@invest), class: 'no-underline likes', method: :post %></h6>
+            <% else %>
+              <h6 class="pl2"><i class="material-icons likes-icon">thumb_up</i><%= link_to @invest.likes.length, invest_like_path(@invest, Like.find_by(user: current_user, invest: @invest)), class: 'no-underline likes', method: :delete %></h6>
+            <% end %>
+          </div>
+          <div class="cl divider w-100"></div>
+          <div class="pt2">
+            <h4 class="mt1"><%= @invest.title %></h4>
+            <p><%= @invest.body %></p>
+          </div>
+        </div>
       </div>
-    <% end %>
+    </div>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col s12">
+    <div class="card">
+      <div class="card-stacked">
+        <div class="card-content">
+          <span class="card-title">links</span>
+          <% @invest.links.try(:each) do |i| %>
+            <a href="<%= i.to_a[1] %>"><h6 class="pb-4"><%= i.to_a[0] + ': ' + i.to_a[1] %></h6></a>
+          <% end %>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col s12">
+    <div class="card">
+      <div class="card-stacked">
+        <div class="card-content">
+          <span class="card-title">history</span>
+          <% @invest.statuses.try(:each) do |i| %>
+            <div class="cl overflow-auto p4">
+              <p class="left"><%= i.title %>:</p>
+              <p class="left ml4"><%= i.detail %></p>
+              <p class="right ml4"><%= i.created_at.strftime('%H:%M - %b %e %Y') %></p>
+            </div>
+          <% end %>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
