--- a/app/views/kaminari/_next_page.html.erb
+++ b/app/views/kaminari/_next_page.html.erb
@@ -1,1 +1,13 @@
-<%= link_to_unless current_page.last?, raw('Older &raquo;'), url, :remote => remote do |name| -%><span class="disabled"><%= name %></span><% end -%>
+<% if current_page.last? %>
+  <li class="disabled">
+    <%= content_tag :a do %>
+      <i class="material-icons">chevron_right</i>
+    <% end %>
+  </li>
+<% else %>
+  <li class="waves-effect">
+    <%= link_to url, :rel => 'next', :remote => remote do %>
+      <i class="material-icons">chevron_right</i>
+    <% end %>
+  </li>
+<% end %>
