--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -3,7 +3,7 @@
     <div class="nav-wrapper">
       <div class="flex justify-between">
         <div class="w-30">
-          <a href="/" class="brand-logo w-30 left no-underline"><%= image_tag 'header-logo.svg', class: 'pt3' %></a>
+          <a href="/" class="brand-logo w-30 left no-underline head-logo"><%= image_tag 'header-logo.svg', class: 'pt3' %></a>
         </div>
         <div class="w-40">
           <%= form_tag(invests_path, :method => 'get') do %>
