--- a/app/views/invests/show.html.erb
+++ b/app/views/invests/show.html.erb
@@ -1,8 +1,8 @@
 <% if @invest.user == current_user %>
   <div class="row">
     <div class="col s12">
-      <%= link_to 'edit', edit_invest_path(@invest), class: 'waves-effect waves-light btn' %>
-      <%= link_to 'update history', new_invest_status_path(@invest), class: 'waves-effect waves-light btn' %>
+      <%= link_to 'edit', edit_invest_path(@invest), class: 'waves-effect waves-light btn btn-dark' %>
+      <%= link_to 'update history', new_invest_status_path(@invest), class: 'waves-effect waves-light btn btn-dark' %>
     </div>
   </div>
 <% end %>
@@ -17,9 +17,9 @@
           </div>
           <div class="right">
             <% if current_user.likes.where(invest: @invest).blank? %>
-              <h6 class="pl2"><i class="material-icons likes-icon">thumb_up</i><%= link_to @invest.likes.length, invest_likes_path(@invest), class: 'no-underline likes', method: :post %></h6>
+              <h6 class="pl2"><%= link_to invest_likes_path(@invest), class: 'no-underline likes', method: :post do %><i class="material-icons likes-icon">thumb_up</i> <%= @invest.likes.length %><% end %></h6>
             <% else %>
-              <h6 class="pl2"><i class="material-icons likes-icon">thumb_up</i><%= link_to @invest.likes.length, invest_like_path(@invest, Like.find_by(user: current_user, invest: @invest)), class: 'no-underline likes', method: :delete %></h6>
+              <h6 class="pl2"><%= link_to invest_like_path(@invest, Like.find_by(user: current_user, invest: @invest)), class: 'no-underline likes', method: :delete do %><i class="material-icons likes-icon">thumb_up</i> <%= @invest.likes.length %><% end %></h6>
             <% end %>
           </div>
           <div class="cl divider w-100"></div>
