--- a/app/views/invests/edit.html.erb
+++ b/app/views/invests/edit.html.erb
@@ -1,51 +1,28 @@
-<div class="w-full-card w-auto">
-  <div class="m-0 p-0">
-    <ul class="list-reset float-none">
-      <%= link_to(invest_path(@invest)) do %>
-        <li class="float-left p-4 bg-grey-light mx-1 hover:bg-grey-lightest">cancel</li>
-      <% end %>
-    </ul>
+<div class="row">
+  <div class="col s12">
+    <%= link_to 'cancel', invest_path(@invest), class: 'waves-effect waves-light btn btn-dark' %>
   </div>
 </div>
-<div class="w-full-card">
-  <div class="w-full p-4 pb-0">
-    <h2 class="mb-6"><%= t(".title") %></h2>
-  </div>
+<div class="row">
+  <div class="col s12">
+    <div class="card">
+      <div class="card-stacked">
+        <div class="card-content">
+          <span class="card-title pb3"><%= t(".title") %></span>
 
-  <div class="w-full p-4 pt-0">
-    <%= simple_form_for @invest do |f| %>
-      <div class="my-2">
-        <p class="text-sm">title:</p>
-      </div>
-      <div class="text-field my-2">
-        <%= f.input :title, input_html: { class: 'w-full-input' }, label: false %>
-      </div>
-      <div class="my-2">
-        <p class="text-sm">description:</p>
-      </div>
-      <div class="text-field my-2">
-        <%= f.input :body, input_html: { class: 'w-full-input h-32' }, label: false %>
-      </div>
+          <%= simple_form_for @invest do |f| %>
+            <%= f.input :title, input_html: { class: 'validate' } %>
+            <%= f.input :body, input_html: { class: 'validate textarea-main' } %>
 
-      <%= f.simple_fields_for :links, OpenStruct.new(@invest.links) do |link| %>
-        <div class="my-2">
-          <p class="text-sm">homepage:</p>
-        </div>
-        <div class="text-field my-2">
-          <%= link.input :homepage, input_html: { class: 'w-full-input' }, label: false %>
-        </div>
+            <%= f.simple_fields_for :links, OpenStruct.new(@invest.links) do |link| %>
+                <%= link.input :homepage, input_html: { class: 'validate' } %>
+                <%= link.input :github, input_html: { class: 'validate' } %>
+            <% end %>
 
-        <div class="my-2">
-          <p class="text-sm">github:</p>
+              <%= f.button :submit, class: 'btn-dark' %>
+          <% end %>
         </div>
-        <div class="text-field my-2">
-          <%= link.input :github, input_html: { class: 'w-full-input' }, label: false %>
-        </div>
-      <% end %>
-
-      <div class="submit-field my-4 text-center">
-        <%= f.button :submit, class: 'btn-default mx-auto px-8' %>
       </div>
-    <% end %>
+    </div>
   </div>
 </div>
