--- a/app/views/passwords/create.html.erb
+++ b/app/views/passwords/create.html.erb
@@ -1,3 +1,7 @@
-<div id="clearance" class="password-reset w-1/2 mx-auto bg-grey-lighter p-8">
-  <p><%= t(".description") %></p>
+<div class="w-60-l w-80-m w-100-s ml-auto mr-auto">
+  <div class="card blue-grey darken-1">
+    <div class="card-content white-text">
+      <p class="white-text pb4 center"><%= t(".description") %></p>
+    </div>
+  </div>
 </div>
