--- a/app/views/passwords/edit.html.erb
+++ b/app/views/passwords/edit.html.erb
@@ -1,17 +1,19 @@
-<div id="clearance" class="password-reset w-1/2 mx-auto bg-grey-lighter p-8">
-  <h2 class="mb-6"><%= t(".title") %></h2>
+<div class="w-60-l w-80-m w-100-s ml-auto mr-auto">
+  <div class="card blue-grey darken-1">
+    <div class="card-content white-text">
+      <span class="card-title pb3"><%= t(".title") %></span>
+      <p class="white-text pb4"><%= t(".description") %></p>
 
-  <p><%= t(".description") %></p>
+      <%= form_for :password_reset,
+                   url: user_password_path(@user, token: @user.confirmation_token),
+                   html: { method: :put } do |form| %>
+        <div class="input-field">
+          <label for="session_password" class="light-color">password</label>
+          <%= form.password_field :password, class: 'validate light-color' %>
+        </div>
 
-  <%= form_for :password_reset,
-        url: user_password_path(@user, token: @user.confirmation_token),
-        html: { method: :put } do |form| %>
-    <div class="password-field text-field my-2">
-      <%= form.password_field :password, class: 'w-full-input', placeholder: t("forms.password") %>
+        <%= form.submit class: 'btn black-text pointer' %>
+      <% end %>
     </div>
-
-    <div class="submit-field my-4 text-center">
-      <%= form.submit class: 'btn-default mx-auto px-8' %>
-    </div>
-  <% end %>
+  </div>
 </div>
