--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -9,7 +9,7 @@
           <%= form_tag(invests_path, :method => 'get') do %>
             <div class="input-field bg-black-10">
               <%= search_field_tag :search, params[:search] %>
-              <label class="label-icon" for="search"><i class="material-icons">search</i></label>
+              <label class="label-icon" for="search"><i class="material-icons white-text">search</i></label>
               <i class="material-icons">close</i>
             </div>
           <% end %>
@@ -18,15 +18,15 @@
           <ul class="right">
             <li>
               <%= link_to new_invest_path, class: 'no-underline' do %>
-                <i class="material-icons">library_add</i>
+                <i class="material-icons white-text">library_add</i>
               <% end %>
             </li>
             <li>
               <%= link_to activities_index_path, class: 'no-underline' do %>
-                <i class="material-icons">mail_outline</i>
+                <i class="material-icons white-text">mail_outline</i>
               <% end %>
             </li>
-            <li><a class="dropdown-trigger no-underline" href="#!" data-target="mainMenu"><i class="material-icons">menu</i></a></li>
+            <li><a class="dropdown-trigger no-underline" href="#!" data-target="mainMenu"><i class="material-icons white-text">menu</i></a></li>
           </ul>
         </div>
       </div>
